[package]
name = "gds_web"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13", features = ["debug","wgpu", "canvas", "image", "advanced"] }
libreda-db = "0.0.12"
libreda-oasis = "0.0.5"
libreda-lefdef = "0.0.5"
iron-shapes = "0.1.1"
# Native file dialog for picking GDS/OASIS files (desktop only)
rfd = { version = "0.12", optional = true }
#libreda-splay = "0.1.1"
portrait = "0.3.0"
petgraph = "0.6"
fnv = "1.0"
rstar = "0.12"


[features]
native = ["rfd"]